--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,12 @@ services:
   public:
     image: artemsavchuk94/angular-devops:latest
     ports:
-      - '8080:80'
-          
+      - '8080:80'  
+    volumes:
+      - ./nginx/conf.d:/etc/nginx/conf.d  
   devops-be:
     image: artemsavchuk94/node-web-app2:latest 
-    ports:
-      - '3000:3000'
+    
 
    
      
